--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Vite + React</title>
   </head>
   <body>
+    <div id="modalPortal"></div>
+    <div id="backdropPortal"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
